--- a/configuration.yaml
+++ b/configuration.yaml
@@ -6,6 +6,11 @@ default_config:
 tts:
   - platform: google_translate
 
+nest:
+  client_id: !secret nest_client_id
+  client_secret: !secret nest_client_secret
+  project_id: !secret nest_project_id
+
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
